# digitale-bildverarbeitung

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cspell.json  mkdocs.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: pytest.yaml
docs/: main.md  requirements_docs.txt  utils.md
docs/pipeline/: calibration.md  lane.md  line.md  overlay.md  perspective.md  threshold.md
src/: Projekt_Spurerkennung_v2.ipynb  lane_detection.ipynb  main.py
src/01_Setup/: check_setup.ipynb
src/01_setup/: check_setup.ipynb
src/02_bildvorverarbeitung/: 00_Kenngroessen.ipynb  02_Histogramme.ipynb
src/03_Merkmalsextraktion_Faltung/: 03_Faltung_v2.ipynb
src/04_Merkmale_Morph_v2/: 05_morph_v2.ipynb
src/exam/: lane_detection.ipynb
src/exercise/02_bildvorverarbeitung/: 02_Histogramme.ipynb
src/exercises/02_bildvorverarbeitung/: 02_Histogramme.ipynb
src/pipeline/: calibration.py  curve.py  curve_fitting.py  lane.py  line.py  overlay.py  perspective.py  perspective_transformation.py  pipeline.ipynb  region.py  segmentation.py  threshold.py  thresholding.py  undistortion.py  view.py
src/utils/: calibration.py  shell.py
