[tool.poetry]
name = "digital_image_processing"
version = "0.1.0"
description = "Dolore fugiat ullamco voluptate incididunt voluptate voluptate magna esse eiusmod velit deserunt cillum ut do."
authors = [
  "Felix Hoffmann <felix.emmanuel.hoffmann@gmail.com>",
  "Leopold Fuchs <kontakt@leopold-fuchs.de>",
  "Maxime Fritzsch <mfritzsch89@gmail.com>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
pandas = "^1.5.0"
numpy = "^1.23.3"
opencv-python = "^4.6.0.66"
matplotlib = "^3.6.1"
scipy = "^1.9.2"
fire = "^0.4.0"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^22.8.0" }
isort = "^5.10.1"
mypy = "^0.981"
pylint = "^2.15.3"
pre-commit = "^2.20.0"
jupyter = "^1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.0"
mkdocs-material = "^8.5.6"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-autorefs = "^0.4.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
pymdown-extensions = "^9.8"
mkdocs-mermaid2-plugin = "^0.6.0"

[tool.mypy]
mypy_path = 'src'
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pylint]
disable = "missing-module-docstring, broad-except"
max-line-length = 120
generated-members = "np.*, cv2.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
